module_7 finished - Finalized adding, editing, and deleting trips from DB. Implemented a login form and authentication via JWT for security. SPA is fully functional and utilizes API to update trips on client-facing website. TODO: Add register form for the SPA.

--- a/app_admin/src/app/add-trip/add-trip.component.html
+++ b/app_admin/src/app/add-trip/add-trip.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-4">
+<div class="col-md-4 mt-5 position-absolute top-50 start-50 translate-middle">
     <h2 class="text-center">Add Trip</h2>
 
     <form *ngIf="addForm" [formGroup]="addForm" (ngSubmit)="onSubmit()">
@@ -99,7 +99,8 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-info">Save</button>
-
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <button type="submit" class="btn btn-info mt-3">Save</button>
+        </div>
     </form>
 </div>
