--- a/app_admin/src/app/trip-card/trip-card.component.html
+++ b/app_admin/src/app/trip-card/trip-card.component.html
@@ -1,8 +1,10 @@
 <!--<pre>{{trips | json}}</pre> -->
 
 
-<div class="card ml-4">
-    <div class="card-header">{{ trip.name }}</div>
+<div class="card mb-4">
+    <div class="card-header">
+        {{ trip.name }}
+    </div>
 
     <img src="assets/images/{{ trip.image }}"
         alt="trip thumbnail" class="card-img-top">
@@ -17,14 +19,17 @@
 {{trip.length}} only {{trip.perPerson|currency:'USD':'symbol'}} per person
         </p>
 
-        <p class="card-text" [innerHTML]="trip.description">
-        </p>
+        <p class="card-text" [innerHTML]="trip.description"></p>
 
-        <div>
-            <button 
-                (click)="editTrip(trip)" class="btn btn-info">Edit Trip
-            </button>
-            
-        </div>
+        <button *ngIf="isLoggedIn()"
+            type="button" (click)="editTrip(trip)" class="btn btn-info">
+            Edit Trip
+        </button>
+
+        <button *ngIf="isLoggedIn()"
+            type="button" class="btn btn-danger ms-5" (click)="deleteTrip(trip)">
+                Delete Trip
+        </button>
+
     </div>
 </div>
