--- a/app_server/views/travel.hbs
+++ b/app_server/views/travel.hbs
@@ -20,6 +20,8 @@
 								<li>
 									<a href="/api/trips/{{this.code}}"><img src="images/{{this.image}}" alt="Img"></a>
 									<h2><a href="/travel">{{this.name}}</a></h2>
+									<p>Resort: {{this.resort}}</p>
+									<p>Package: {{this.length}} only {{this.perPerson}} per person</p>
 									{{{this.description}}}
 								</li>
 							{{/each}}
